Usecase-1-Feature-Store-Feast/k8s/api-depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature-store-api
  namespace: feature-store
spec:
  replicas: 4
  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: feature-store-api

  template:
    metadata:
      labels:
        app: feature-store-api

    spec:
      containers:
      - name: feature-store-api
        image: 497508796460.dkr.ecr.ap-south-1.amazonaws.com/feature-store-api:1.0
        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "1000m"
            memory: "1Gi"

        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20
