Usecase-1-Feature-Store-Feast/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-store-api
  namespace: feature-store
  labels:
    app: feature-store-api
spec:
  selector:
    app: feature-store-api
  ports:
    - name: http          # <-- Required
      port: 80
      targetPort: 8000
  type: ClusterIP
