Usecase-1-Feature-Store-Feast/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: feature-store

spec:
  selector:
    app: redis

  ports:
  - port: 6379
    targetPort: 6379

  type: ClusterIP
